--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ body {
 
 .slider-img{
     width: 100%;
-    height: 88.5vh;
-    filter: brightness(70%);
+    height: 89vh;
+    filter: brightness(30%);
+}
+
+.btn-main{
+    text-transform: uppercase;
+    padding: 12px 20px;
 }
