--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,47 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-.slider-img{
-    width: 100%;
-    height: 89vh;
-    filter: brightness(30%);
+.margin-bottom-large {
+  margin-bottom: 96px;
 }
 
-.btn-main{
-    text-transform: uppercase;
-    padding: 12px 20px;
+.text-dark-blue {
+  color: #231d4f;
+}
+
+.heading-tertiary {
+  font-weight: 600;
+}
+
+.check-icon {
+  color: #91a7ff;
+}
+.slider-img {
+  width: 100%;
+  height: 89vh;
+  filter: brightness(30%);
+}
+
+.btn-main {
+  text-transform: uppercase;
+  padding: 12px 20px;
+}
+
+.btn-price {
+  font-size: 16px;
+  font-weight: 500;
+  background-color: #fff0f6;
+  color: #3f87f5;
+  padding: 8px 20px;
+}
+
+.btn-price:hover{
+    color: #3f87f5;
+    background-color: #ffdeeb;
+}
+.custome-price-cart {
+  background-color: #3f87f5;
+  color: white;
+  box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25);
+  border-radius: 26px;
 }
