--- a/css/style.css
+++ b/css/style.css
@@ -48,4 +48,13 @@ body {
   color: white;
   box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25);
   border-radius: 26px;
+  position: relative;
+}
+
+.hot{
+    position: absolute;
+    top: -12px;
+    right: 20px;
+    background-color: #ff6b6b;
+    padding: 4px 10px;
 }
