--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,8 @@ body {
     background-color: #ff6b6b;
     padding: 4px 10px;
 }
+
+footer{
+    background-color: #0B0D17;
+    padding: 60px 10px;
+}
