--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+/* COMMON STYLE */
 .margin-bottom-large {
-  margin-bottom: 96px;
+  margin-bottom: 110px;
 }
 
 .text-dark-blue {
@@ -21,6 +22,7 @@ body {
   color: #91a7ff;
 }
 
+/* SLIDER IMG */
 .slider-img {
   width: 100%;
   height: 89vh;
@@ -37,30 +39,31 @@ body {
   font-weight: 500;
   background-color: #fff0f6;
   color: #3f87f5;
-  padding: 8px 20px;
 }
 
-.btn-price:hover{
-    color: #3f87f5;
-    background-color: #ffdeeb;
+.btn-price:hover {
+  color: #3f87f5;
+  background-color: #ffdeeb;
 }
+
 .custome-price-cart {
   background-color: #3f87f5;
   color: white;
   box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25);
   border-radius: 26px;
   position: relative;
+  transform: scaleY(1.07);
 }
 
-.hot{
-    position: absolute;
-    top: -12px;
-    right: 20px;
-    background-color: #ff6b6b;
-    padding: 4px 10px;
+.hot {
+  position: absolute;
+  top: -12px;
+  right: 20px;
+  background-color: #ff6b6b;
+  padding: 4px 10px;
 }
 
-footer{
-    background-color: #0B0D17;
-    padding: 60px 10px;
+footer {
+  background-color: #0b0d17;
+  padding: 60px 10px;
 }
