--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,18 @@ body {
 .custome-price-cart {
   background-color: #3f87f5;
   color: white;
-  box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25);
+  box-shadow: 0px 10px 30px rgba(63, 135, 245, 0.25);
   border-radius: 26px;
   position: relative;
   transform: scaleY(1.07);
+}
+
+.gellery-photo{
+  transition: all .4s;
+}
+
+.gellery-photo:hover{
+  transform: scaleY(1.05);
 }
 
 .hot {
