--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,36 @@ body {
 .btn-main {
   text-transform: uppercase;
   padding: 12px 20px;
+  background-color: #fff;
+  color: #3f87f5;
+  font-weight: 600;
+  transition: all .2s;
+}
+
+.btn-main:hover{
+  background-color: #3f87f5;
+  color: #fff;
+}
+
+/* ------------------------
+    Hot Package 
+--------------------------*/
+
+.custome-price-cart {
+  background-color: #3f87f5;
+  color: white;
+  box-shadow: 0px 10px 30px rgba(63, 135, 245, 0.25);
+  border-radius: 26px;
+  position: relative;
+  transform: scaleY(1.07);
+}
+
+.hot {
+  position: absolute;
+  top: -12px;
+  right: 20px;
+  background-color: #ff6b6b;
+  padding: 4px 10px;
 }
 
 .btn-price {
@@ -46,29 +76,16 @@ body {
   background-color: #ffdeeb;
 }
 
-.custome-price-cart {
-  background-color: #3f87f5;
-  color: white;
-  box-shadow: 0px 10px 30px rgba(63, 135, 245, 0.25);
-  border-radius: 26px;
-  position: relative;
-  transform: scaleY(1.07);
-}
 
+/* ----------------------
+        Gallery 
+-------------------------*/
 .gellery-photo{
   transition: all .4s;
 }
 
 .gellery-photo:hover{
   transform: scaleY(1.05);
-}
-
-.hot {
-  position: absolute;
-  top: -12px;
-  right: 20px;
-  background-color: #ff6b6b;
-  padding: 4px 10px;
 }
 
 footer {
